--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-# Django==3.0.2
-python-decouple==3.1
-# Pillow==7.0.0
-asgiref==3.3.1
+asgiref==3.5.0
+dj-database-url==0.5.0
 Django==3.1.7
-# Pillow==8.1.2
-pytz==2021.1
-sqlparse==0.4.1
+django-heroku==0.3.1
+gunicorn==20.1.0
+Pillow==8.1.2
+psycopg2==2.9.3
+python-decouple==3.4
+pytz==2021.3
+sqlparse==0.4.2
+whitenoise==6.0.0
